Added section for tuning configuration settings